# Mathematical-AI-Journey

./: .gitignore  README.md  schedule.html
CPP/: Makefile  Readme.md  main.cpp
CPP/1_first_cpp_program/: consteval_cout_demo.cpp  main.cpp  statement.cpp
CPP/2_statements_functions/: function.cpp  statement.cpp
CPP/3_input_output/: main.cpp
CPP/4_types/: intModifiers.cpp  integer.cpp  numberSystem.cpp
Deep-reinforcement-learning/: requirements.txt
Mathematics/: readme.md
Mathematics/.obsidian/: workspace.json
linear-algebra/: Makefile
machine-learning/: Makefile
nlp/: docs.md  download_nlp_notebooks.sh  pyproject.toml
nlp/nlp-demystified/: 02_Tokenization.ipynb  03_Basic_Preprocessing.ipynb
