[project]
name = "nlp"
version = "0.1.0"
description = "An educational NLP project to explore natural language processing fundamentals, models, and real-world applications."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Olaolouwa Amiche Stéphane KPOVIESSI" }
]
dependencies = [
    "spacy>=3.8.5",
]
